--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Revisando as Classes</title>
+    <script src="js/spaceship.js"></script>
+    <script src="js/battle_spaceship.js"></script>
+    <script src="js/transport_spaceship.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body>
       <h1>Revisando as Classes</h1>
